# ProjectDemo_Apache_Airflow

./: .gitignore  LICENSE  README.md  pyproject.toml
airflow/dags/: whatsapp_dag.py
src/whatsapp_agent/: __main__.py
src/workflows/: sample_taks.py
