[project]
name = "workflows"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "AIK1DO", email = "alk1do@users.noreply.github.com"},
]
dependencies = ["apache-airflow==2.7.2", "whatsapp-bot @ git+https://github.com/AlK1DO/WhatsApp_bot.git"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.mypy.overrides]
module = ["flask_appbuilder.*"]
ignore_missing_imports = true